--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 body {
   font-family: "Open Sans";
+  background-image: url("http://o.aolcdn.com/hss/storage/midas/a2374ed5b3f7895818bd9ce592ad052b/203800459/ti-84-plus-ce-bright-white.jpg");
 }
