--- a/beta/other resources/tiles.css
+++ b/beta/other resources/tiles.css
@@ -24,3 +24,57 @@ img {
   height: 200px;
   position: relative;
 }
+
+@fab-color: #03A9F4;
+@fab-size: 64px;
+@fab-margin: 1 / 4 * 3 * @fab-size;
+@fab-child-size: 1 / 3 * 2 * @fab-size;
+@fab-child-margin: (@fab-size - @fab-child-size) / 2 + @fab-margin;
+
+.fab{
+	background: @fab-color;
+	width: @fab-size;
+	height: @fab-size;
+	border-radius: 50%;
+	text-align:center;
+	color: #FFF;
+	box-shadow:0px 0px 3px rgba(0,0,0,0.5),3px 3px 3px rgba(0,0,0,0.25);
+	position: fixed;
+	bottom: @fab-margin;
+	right: @fab-margin;
+	font-size: 2.6667em;
+	display: inline-block;
+	cursor: default;
+}
+
+.fab span{
+	vertical-align:middle;
+}
+
+.fab.child{
+	right: @fab-child-margin;
+	width: @fab-child-size;
+	height: @fab-child-size;
+	display: none;
+	opacity: 0;
+	font-size: 2em;
+}
+
+.black() when (lightness(@fab-color) > 50%){
+	.fab{
+		color: #000;
+	}
+}
+
+.black();
+
+.backdrop{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: #ECECEC;
+	opacity: 0.9;
+	display: none;
+}
