--- a/beta/other resources/tiri.css
+++ b/beta/other resources/tiri.css
@@ -7,6 +7,7 @@
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   border-bottom-left-radius: 20px;
+  white-space: no wrap;
 }
 
 .message-return {
@@ -20,4 +21,5 @@
   border-bottom-right-radius: 20px;
   margin-top: 100px;
   color: white;
+  white-space: no wrap;
 }
