--- a/beta/other resources/tiri.css
+++ b/beta/other resources/tiri.css
@@ -16,7 +16,7 @@
 
 .message-return {
   min-width: 100px;
-  float: right;
+  float: left;
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
   border-bottom-left-radius: 0px;
