--- a/beta/other resources/tiles.css
+++ b/beta/other resources/tiles.css
@@ -5,6 +5,11 @@
     border-radius: 5px;
 }
 
+.formatting-bar {
+    position: sticky;
+    top: 2px;
+}
+
 .card:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
