--- a/beta/other resources/tiles.css
+++ b/beta/other resources/tiles.css
@@ -3,6 +3,12 @@
     transition: 0.3s;
     width: 40%;
     border-radius: 5px;
+    -webkit-touch-callout: none;
+     -webkit-user-select: none;
+      -khtml-user-select: none;
+        -moz-user-select: none;
+         -ms-user-select: none; 
+             user-select: none; 
 }
 
 .formatting-bar {
