--- a/beta/other resources/cmenu.css
+++ b/beta/other resources/cmenu.css
@@ -19,7 +19,7 @@
   list-style: none;
   text-decoration: none;
   margin: 5;
-  padding: 10;
+  padding: 10px;
   display: block;
   margin-bottom: 4px;
 }
