--- a/beta/other resources/tiles.css
+++ b/beta/other resources/tiles.css
@@ -191,3 +191,30 @@ img {
 .fontSelectUl li:hover {
   background: #DDD;
 }
+
+#ti-work {
+  background-color: lightgray;
+  width: 50%;
+  height: 50%;
+  position: absolute;
+  top: 25%;
+  left: 25%;
+  border-radius: 50%;
+  transition-duration: 0.75s;
+  color: gray;
+  font-size: 20px;
+  text-align: center;
+  display: table;
+  -webkit-transition-duration: 0.75s;
+}
+
+.ti-work-icon {
+  background-color: lightgray;
+  width: 25%;
+  height: 25%;
+  position: absolute;
+  top: 37.5%;
+  left: 37.5%;
+  border-radius: 50%;
+  transition-duration: 0.75s;
+}
