--- a/beta/other resources/tiles.css
+++ b/beta/other resources/tiles.css
@@ -198,7 +198,8 @@ img {
   height: 50%;
   position: absolute;
   top: 40%;
-  left: 25%;
+  /*left: 25%;*/
+  float: right;
   border-radius: 50%;
   transition-duration: 0.75s;
   color: gray;
