--- a/beta/other resources/tiles.css
+++ b/beta/other resources/tiles.css
@@ -194,11 +194,11 @@ img {
 
 #ti-work {
   background-color: lightgray;
-  width: 50%;
-  height: 50%;
+  width: 110px;
+  height: 110px;
   position: absolute;
-  top: 40%;
-  left: 50%;
+  top: 75;
+  left: 75%;
   border-radius: 50%;
   transition-duration: 0.75s;
   color: gray;
@@ -209,8 +209,8 @@ img {
 
 .ti-work-icon {
   background-color: lightgray;
-  width: 25%;
-  height: 25%;
+  width: 50px;
+  height: 50px;
   position: absolute;
   top: 52.5%;
   left: 50%;
