--- a/beta/other resources/tiles.css
+++ b/beta/other resources/tiles.css
@@ -197,8 +197,8 @@ img {
   width: 100px;
   height: 100px;
   position: absolute;
-  top: 75;
-  left: 75%;
+  top: calc(100% - 100px);
+  left: calc(100% - 100px);
   border-radius: 50%;
   transition-duration: 0.75s;
   color: gray;
@@ -212,8 +212,8 @@ img {
   width: 50px;
   height: 50px;
   position: absolute;
-  top: 52.5%;
-  left: 50%;
+  top: calc(100% - 50px);
+  left: calc(100% - 50px);
   border-radius: 50%;
   transition-duration: 0.75s;
 }
