--- a/beta/other resources/tiles.css
+++ b/beta/other resources/tiles.css
@@ -196,7 +196,7 @@ img {
   background-color: lightgray;
   width: 100px;
   height: 100px;
-  position: absolute;
+  position: fixed;
   top: calc(100% - 100px);
   left: calc(100% - 100px);
   border-radius: 50%;
@@ -210,6 +210,7 @@ img {
 .ti-work-icon {
   background-color: lightgray;
   width: 50px;
+  position: fixed;
   height: 50px;
   position: absolute;
   top: calc(100% - 50px);
