--- a/beta/other resources/tiles.css
+++ b/beta/other resources/tiles.css
@@ -194,26 +194,36 @@ img {
 
 #ti-work {
   background-color: lightgray;
-  width: 100px;
-  height: 100px;
-  position: fixed;
-  top: calc(100% - 100px);
-  left: calc(100% - 100px);
   border-radius: 50%;
-  transition-duration: 0.75s;
-  color: gray;
+  width: 50px;
+  height: 50px;
+  position: fixed;
   text-align: center;
   display: table;
+  text-align: center;
+  transition-duration: 0.75s;
   -webkit-transition-duration: 0.75s;
+  right: 10px;
+  bottom: 10px;
+  color: gray;
+  user-select: none;
+  z-index: 1000000000000000;
 }
 
 .ti-work-icon {
   background-color: lightgray;
-  width: 50px;
-  position: fixed;
-  height: 50px;
-  top: calc(100% - 50px);
-  left: calc(100% - 50px);
   border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  text-align: center;
+  display: table;
+  text-align: center;
   transition-duration: 0.75s;
+  -webkit-transition-duration: 0.75s;
+  right: 10px;
+  bottom: 10px;
+  color: white;
+  user-select: none;
+  z-index: 1000000000;
 }
