--- a/beta/other resources/tiles.css
+++ b/beta/other resources/tiles.css
@@ -1,5 +1,7 @@
 .card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    border: 1px solid lightgray;
+    margin: 2%;
+    padding: 2%;
     transition: 0.3s;
     width: 40%;
     border-radius: 5px;
@@ -10,6 +12,7 @@
          -ms-user-select: none; 
              user-select: none; 
 }
+
 
 .formatting-bar {
     position: sticky;
