--- a/beta/other resources/photos.css
+++ b/beta/other resources/photos.css
@@ -2,7 +2,8 @@
   background-color: black;
   border-radius: 10px;
   list-style-type: none;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  border: 1px solid lightgray;
+  margin: 2%;
   transition: 0.3s;
   width: 40%;
   border-radius: 5px;
