--- a/beta/titanium/src/style.css
+++ b/beta/titanium/src/style.css
@@ -1,13 +1,3 @@
-.titanium-input{
-    position: relative;
-}
-
-.titanium-input span {
-    position: absolute;
-    left: 2px;
-}
-
-
 @-webkit-keyframes spin {
   0% {
     -webkit-transform: rotate(0deg);
@@ -75,6 +65,20 @@ webview {
   margin: 0;
   padding: 0;
   overflow: hidden;
+}
+
+.titanium-input{
+    position: relative;
+}
+
+.titanium-input span {
+    position: absolute;
+    left: 2px;
+}
+
+.dark {
+    background-color: #2f3030;
+    color: white;
 }
 
 .x {
