--- a/style.css
+++ b/style.css
@@ -130,6 +130,7 @@ a {
   height: 50px;
   width: 50px;
   padding: 5px;
+  margin-right: 5px;
   text-align: center;
   font-size: 315%;
   float: left;
